--- a/tindog-site.html
+++ b/tindog-site.html
@@ -22,7 +22,7 @@
 
   <!-- CSS Style Sheets -->
 
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="tindog-style.css">
 </head>
 
 <body>
