--- a/tindog-site.html
+++ b/tindog-site.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8">
   <title>TinDog</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  
+  <link rel="icons" href="website_images\dog.png">
   <!-- Google Font APIs -->
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
