--- a/tindog-site.html
+++ b/tindog-site.html
@@ -6,7 +6,7 @@
   <title>TinDog</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
-  <link rel="icons" href="website_images\dog.png">
+  <link rel="icon" href="website_images\dog.png">
   <!-- Google Font APIs -->
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
