--- a/tindog-site.html
+++ b/tindog-site.html
@@ -131,7 +131,7 @@
   <!-- Press -->
 
   <section id="press">
-    <img class="press-img" src="website_images\techcrunch.png" alt="tc-logo">
+    <img class="press-img" src="website_images\TechCrunch.png" alt="tc-logo">
     <img class="press-img" src="website_images\tnw.png" alt="tnw-logo">
     <img class="press-img" src="website_images\bizinsider.png" alt="biz-insider-logo">
     <img class="press-img" src="website_images\mashable.png" alt="mashable-logo">
